# ChangeLog for dev-lang/lua
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/lua/ChangeLog,v 1.144 2010/01/10 18:27:53 nixnut Exp $

  10 Jan 2010; nixnut <nixnut@gentoo.org> lua-5.1.4-r4.ebuild:
  ppc stable #295134

  01 Jan 2010; Tobias Klausmann <klausman@gentoo.org> lua-5.1.4-r4.ebuild:
  Stable on alpha, bug #295698

  08 Dec 2009; Brent Baude <ranger@gentoo.org> lua-5.1.4-r4.ebuild:
  Marking lua-5.1.4-r4 ppc64 for bug 295134

  07 Dec 2009; Markus Meier <maekke@gentoo.org> lua-5.1.4-r4.ebuild:
  arm stable, bug #295134

  07 Dec 2009; Tiago Cunha <tcunha@gentoo.org> lua-5.1.4-r4.ebuild:
  stable sparc, bug 295134

  07 Dec 2009; Markus Meier <maekke@gentoo.org> lua-5.1.4-r4.ebuild:
  amd64/x86 stable, bug #295134

  04 Dec 2009; Jeroen Roovers <jer@gentoo.org> lua-5.1.4-r4.ebuild:
  Stable for HPPA (bug #295134).

*lua-5.1.4-r4 (26 Nov 2009)

  26 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> +lua-5.1.4-r4.ebuild:
  jer's earlier fix missed some of the pkgconfig calls for the INSTALL_LIB
  and libdir settings. Fixup so I can do Lua SWIG bindings.

*lua-5.1.4-r3 (24 Nov 2009)

  24 Nov 2009; Jeroen Roovers <jer@gentoo.org> +lua-5.1.4-r3.ebuild:
  Fix libdir path for CMOD in pkgconfig file (bug #294368).

  29 Sep 2009; Ulrich Mueller <ulm@gentoo.org> lua-5.1.4-r2.ebuild:
  Depend on app-emacs/lua-mode with USE=emacs, fixes bug 263249. Explicitly
  assign RDEPEND to make RepoMan happy.

*lua-5.1.4-r2 (10 Jul 2009)

  10 Jul 2009; <mabi@gentoo.org> -files/lua-5.1.3-deprecated.patch,
  -files/lua-5.1.3-test.patch,
  +files/5.1.4/01_all_boolean_expression.upstream.patch,
  +files/5.1.4/02_all_table.upstream.patch, -lua-5.1.1-r2.ebuild,
  -lua-5.1.3-r3.ebuild, +lua-5.1.4-r2.ebuild:
  cleanup and introduce new upstream patches (see http://www.lua.org/bugs.html
  for more)

  15 Apr 2009; Brent Baude <ranger@gentoo.org> lua-5.1.4.ebuild:
  Marking lua-5.1.4 ppc64 for bug 255191
