@@ -27,6 +27,7 @@ DIST lua-5.1.4.tar.gz 216679 RMD160 c867c8364295d3e4fb4e4d8ebb27fa2b2312cdef SHA
 EBUILD lua-5.1.4-r1.ebuild 3610 RMD160 8e52f7cb0cf20522dcc02794f62a55b2edfcf37d SHA1 a9cec1553a600bc539a07a342e0a522465c57c41 SHA256 1d4684e5e6689a89bb1eb22f6464a098d01c9cc77e2c0d55d5bade7aa29878d2
 EBUILD lua-5.1.4-r2.ebuild 3766 RMD160 f242b6f063ef4025a36d144c12a93d9708521af7 SHA1 b8177d807edfcf4a155ba63556a2706d7e64c632 SHA256 b8a6fc749a4b6acd590d2adcdc8e331ede55b6a3df86ddd9762d1f1c1d4c7371
 EBUILD lua-5.1.4-r4.ebuild 3823 RMD160 e59ce0142e35e58b491988ea3c0221ae632bd3c3 SHA1 8b2af36a73cb34f5eb55af3de8d01e93f013305d SHA256 a68e11d29bfdd47259c0c00279665afea361a727a2826c38735491aa5ded2061
+EBUILD lua-5.1.4-r5.ebuild 3841 RMD160 63eee60e07fd500105bbaf23d928609d1924eb24 SHA1 c523aeb1153aa89b1b95f4a885775985fc80b2ba SHA256 c985ff4ff9c7c2bb0431afa81fd4ddc0395b6adb05ff70791882f3e16b0a126c
 EBUILD lua-5.1.4.ebuild 3361 RMD160 3d1700ed30eaac8127ea5631c2910ad2d7aecde8 SHA1 94b68ef195445fdb8dba995ad54d415ed233cd2b SHA256 34b7e7bfb8f99818bcdf38f38236148356dc8e893d1a7f2a20c9e7d5d48f5eb9
-MISC ChangeLog 21281 RMD160 27ef602fa11bb7a72bc61363bbcbdf47a3a13fad SHA1 23ed7773415e4e75965d5ffd92c9be6ac6e2f4ec SHA256 05574599cf63ed0c13d4f75b9002dd533663debcec28664a36051c262f806073
+MISC ChangeLog 21565 RMD160 1fcf03c177cd507d1458a37ad2f86fceac8d7edb SHA1 f2a0493b439cd0a385ff340d2c834b075644a20b SHA256 0aa83183e49bfbd137fb59680481f04cb4fcc892aeb1556f5ed509e839034fa9
 MISC metadata.xml 339 RMD160 0d536a77658ffb6d8bccff7183a5bf4722d0a82d SHA1 f5bd1085f69b6e9d81e42cd711a7846ccb267e31 SHA256 6b3bedf093395def984b71f7c74ce59742c5df6592ad50f1b96c8a2499f27c8b
