@@ -1,6 +1,16 @@
 # ChangeLog for dev-lang/lua
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/lua/ChangeLog,v 1.144 2010/01/10 18:27:53 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/lua/ChangeLog,v 1.146 2010/03/05 19:58:21 mabi Exp $
+
+  05 Mar 2010; <mabi@gentoo.org> lua-5.1.4-r5.ebuild:
+  fix bug #306869
+
+*lua-5.1.4-r5 (23 Feb 2010)
+
+  23 Feb 2010; <mabi@gentoo.org>
+  +files/5.1.4/03_all_debug_getfenv.upstream.patch, +lua-5.1.4-r5.ebuild,
+  +files/5.1.4/04_all_gc_performance.upstream.patch:
+  add upstream patches
 
   10 Jan 2010; nixnut <nixnut@gentoo.org> lua-5.1.4-r4.ebuild:
   ppc stable #295134
